feat: add state of the art

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,175 @@
+
+
+@book{minsky1986,
+    author    = {Minsky, Marvin},
+    title     = {The Society of Mind},
+    publisher = {Simon \& Schuster},
+    address   = {New York, United States},
+    year      = {1986},
+    isbn      = {978-0671657130}
+}
+
+@misc{boyd1995,
+    author       = {John R. Boyd},
+    title        = {The Essence of Winning and Losing},
+    year         = {1995},
+    url          = {https://slightlyeastofnew.com/wp-content/uploads/2010/03/essence_of_winning_losing.pdf},
+    note         = {Edited by Chet Richards and Chuck Spinney}
+}
+
+@article{kephart2003,
+    author       = {Jeffrey O. Kephart and David M. Chess},
+    title        = {The Vision of Autonomic Computing},
+    journal      = {IEEE Computer},
+    year         = {2003},
+    volume       = {36},
+    number       = {1},
+    pages        = {41--50},
+    url          = {https://www.researchgate.net/publication/2955831_The_Vision_Of_Autonomic_Computing},
+    doi          = {10.1109/MC.2003.1160055}
+}
+
+@inproceedings{strassner2009,
+    author       = {John Strassner and James Won-Ki Hong and Sven van der Meer},
+    title        = {The Design of an Autonomic Element for Managing Emerging Networks and Services},
+    booktitle    = {International Conference on Ultra Modern Telecommunications},
+    year         = {2009},
+    url          = {https://www.researchgate.net/publication/221003980_The_design_of_an_Autonomic_Element_for_managing_emerging_networks_and_services},
+    doi          = {10.1109/ICUMT.2009.5345533}
+}
+
+@article{doyle2014,
+    author       = {Deirdre P. Doyle},
+    title        = {Architecture Evolution for Automation and Network Programmability},
+    journal      = {Ericsson Review},
+    url          = {https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=7006f5e8c7b83f2ea265a6155ff9b4cfe11d4011},
+    year         = {2014}
+}
+
+@inproceedings{fallon2016,
+    author       = {Liam Fallon and Sven van der Meer and John Keeney},
+    title        = {Apex: An Engine for Dynamic Adaptive Policy Execution},
+    booktitle    = {IEEE/IFIP Network Operations and Management Symposium (NOMS)},
+    year         = {2016},
+    url          = {https://google.com},
+    doi          = {10.1109/NOMS.2016.7502880}
+}
+
+@inproceedings{mcnamara2018,
+    author       = {Joseph McNamara and John Keeney and Liam Fallon and Sven van der Meer},
+    title        = {A Testbed for Policy Driven Closed Loop Network Management},
+    booktitle    = {IEEE/IFIP Network Operations and Management Symposium (NOMS)},
+    year         = {2018},
+    url          = {https://google.com}, 
+    doi          = {10.1109/NOMS.2018.8406144}
+}
+
+@techreport{etsizsm2018,
+    author       = {ETSI},
+    title        = {Zero-touch Network and Service Management (ZSM); Reference Architecture},
+    institution  = {ETSI},
+    year         = {2018},
+    url          = {https://google.com},
+    number       = {ETSI GS ZSM 002 V1.1.1}
+}
+
+@techreport{onap2018,
+    author       = {ONAP},
+    title        = {Open Network Automation Platform (ONAP) Architecture White Paper},
+    year         = {2018},
+    url          = {https://google.com}
+}
+
+@inproceedings{fallon2019,
+    author       = {Liam Fallon and John Keeney and Ram Krishna Verma},
+    title        = {Autonomic Closed Control Loops for Management, an Idea Whose Time Has Come?},
+    booktitle    = {Conference on Network and Service Management (CNSM)},
+    year         = {2019},
+    url          = {https://google.com},
+    doi          = {10.23919/CNSM46954.2019.9012687}
+}
+
+@techreport{etsizsm2019,
+    author       = {ETSI},
+    title        = {Zero-touch Network and Service Management (ZSM); Closed-Loop Automation Enablers},
+    institution  = {ETSI},
+    year         = {2021},
+    url          = {https://google.com},
+    number       = {ETSI GS ZSM 009-1 V1.1.1}
+}
+
+@article{benzaid2020,
+    author       = {Chafika Benzaid and Tarik Taleb},
+    title        = {AI-Driven Zero Touch Network and Service Management in 5G and Beyond: Challenges and Research Directions},
+    journal      = {IEEE Network},
+    year         = {2020},
+    url          = {https://google.com},
+    doi          = {10.1109/MNET.001.1900252}
+}
+
+
+@techreport{tmforum2021,
+    author       = {TM Forum},
+    title        = {AI Closed Loop Automation - Anomaly Detection and Resolution},
+    institution  = {TM Forum},
+    year         = {2021},
+    url          = {https://google.com},
+    number       = {IG1219 V2.1.0}
+}
+
+@techreport{tmforum2022,
+    author       = {TM Forum},
+    title        = {Closed Loop Automation Implementation Architectures},
+    institution  = {TM Forum},
+    year         = {2022},
+    url          = {https://google.com},
+    number       = {TR284 V3.1.0}
+}
+
+@techreport{tmforum2022ai,
+    author       = {TM Forum},
+    title        = {AI Closed Loop Automation Management},
+    institution  = {TM Forum},
+    year         = {2022},
+    url          = {https://google.com},
+    number       = {IG1219A V1.1.0}
+}
+
+@techreport{ngmn2022,
+    author       = {NGMN Alliance},
+    title        = {Automation and Autonomous System Architecture Framework},
+    year         = {2022},
+    url          = {https://google.com},
+    number       = {Version 1.0}
+}
+
+@techreport{etsieni2023,
+    author       = {ETSI},
+    title        = {Experiential Networked Intelligence (ENI); System Architecture},
+    institution  = {ETSI},
+    url          = {https://google.com},
+    year         = {2023},
+    number       = {ETSI GS ENI 005 V3.1.1}
+}
+
+@techreport{etsieni2024,
+    author       = {ETSI},
+    title        = {Overview of Prominent Control Loop Architectures},
+    institution  = {ETSI},
+    url          = {https://google.com},
+    year         = {2024},
+    number       = {ETSI GR ENI 017 V2.2.1}
+}
+
+@inproceedings{panchal2024,
+    author       = {Deven Panchal and Prafulla Verma and Isilay Baran and Dan Musgrove and David Lu},
+    title        = {Simplifying Network Orchestration Using Conversational AI},
+    booktitle    = {International Conference on Information Networking (ICOIN)},
+    year         = {2024},
+    url          = {https://google.com},
+    doi          = {10.1109/ICOIN59985.2024.10572160}
+}
+
 % Specyfikacja techniczna.
 @misc{enioverview,
     title        = {ETSI GR ENI 017 - "Experiental Networked Intelligence (ENI); Overview of Prominent Closed Control Loops Architectures"},
@@ -9,25 +181,4 @@
     title        = {ETSI GR ENI 004 - "Experiental Networked Intelligence (ENI); Terminology"},
     howpublished = {Dostęp zdalny (24.01.2025): \url{https://www.etsi.org/deliver/etsi_gr/ENI/001_099/004/03.01.01_60/gr_ENI004v030101p.pdf}},
     year         = {2023}
-}
-% Tu jest o OODA
-@misc{boyd,
-    title        = {John R. Boyd - "The Essence of Winning and Losing"},
-    howpublished = {Dostęp zdalny (24.01.2025): https://slightlyeastofnew.com/wp-content/uploads/2010/03/essence_of_winning_losing.pdf},
-    year         = {1995}
-}
-% Tu jest o MAPE-K
-@misc{ibm,
-    title       = {IBM Whitepaper - "An architectural blueprint for autonomic computing."},
-    howpublished = {Dostęp zdalny (24.01.2025): https://users.cs.fiu.edu/~sadjadi/Teaching/Autonomic%20Grid%20Computing/CIS-6612-Summer-2006/AC-Blueprint-WhitePaper-V7.pdf},
-    year         = {2005}
-}
-
-% tu jest o Focale
-@book{nazim, 
-    author    = {Nazim Agoulmine},
-    title     = {Autonomic Network Management Principles},
-    publisher = {Elsevier},
-    address   = {30 Corporate Drive, Suite 400, Burlington, MA 01803, USA},
-    year      = {2011}
 }
