--- a/tex/2-stan-wiedzy/2-historia.tex
+++ b/tex/2-stan-wiedzy/2-historia.tex
@@ -15,7 +15,7 @@ O telefonistkach możemy powiedzieć, że zarządzały one pracą systemu teleko
 
 \begin{figure}[!htbp]
     \centering \includegraphics[width=1.0\linewidth]{22-system.png}
-    \caption{Dwa stany systemu: sprzed, oraz po realizacji zgłoszenia o treści: "D" chce zadzwonić do "F"}\label{fig:}
+    \caption{Dwa stany systemu: sprzed, oraz po realizacji zgłoszenia o treści: "D" chce zadzwonić do "F"}
 \end{figure}
 
 Pomówmy trochę o \hyperlink{def:wnioskowanie}{\textit{wnioskowaniu}}. Jak ono przebiega? Po pierwsze, telefonistka otrzymuje \hyperlink{def:dane}{\textit{dane}}. \textbf{Dane} to fakty lub statystyki zebrane w celu analizy. Telefonistka gromadzi dane w formie faktów dotyczących zaistniałych zdarzeń. Na przykład: dzwoni aparat telefoniczny, telefonistka podnosi słuchawkę i słyszy, że abonent chce połączyć się z abonentem mieszkającym w kamienicy pod numerem 35 na ulicy Polnej. Następnie dostępne dane zostają przekształcone w \hyperlink{def:informacja}{\textit{informację}}. \textbf{Informacja} to dane pozbawione formy przekazu. Równie dobrze rozmowa z abonentem mogłaby przebiec zupełnie inaczej, a telefonistka mogłaby otrzymać listowną prośbę o realizację połączenia. Różne dane mogą dostarczyć tę samą informację, czyli że abonent z określonego łącza chce dodzwonić się do abonenta z innego, konkretnego łącza. Gdy telefonistka uzyska informację o zgłoszeniu, łączy ją z posiadanymi już informacjami, np. dotyczącymi rozmieszczenia łączy na tablicy komutacyjnej. Następnie wykorzystuje swoją \hyperlink{def:wiedza}{\textit{wiedzę}}, czyli zestaw wzorców umożliwiających interpretację oraz przewidywanie tego, co się wydarzyło, co dzieje się obecnie i co może się wydarzyć w przyszłości. \textbf{Wiedza} opiera się na informacji oraz umiejętnościach zdobytych dzięki \hyperlink{def:doswiadczenie}{\textit{doświadczeniu}} lub \hyperlink{def:edukacja}{\textit{edukacji}}. Telefonistka obserwuje aktualny stan systemu i \hyperlink{def:wnioskowanie}{\textit{wnioskując}}, na podstawie wiedzy, wyobraża sobie stan docelowy (pożądany), a następnie definiuje akcje sterujące, które należy przeprowadzić na systemie, aby osiągnął on ten stan.
