--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -1,5 +1,5 @@
 \subsection{Przegląd literatury}
-
+\subsubsection{Wstęp}
 Rozważania na temat inteligentnych systemów w kontekście niniejszej pracy należy zacząć od artykułu opublikowanego przez IBM w 2003 roku \cite{kephart2003}. Wskazuje on, iż ówczesne systemy informatyczne stają się coraz bardziej skomplikowane, co prowadzi do kryzysy zarządzania. Ręczna administracja przestaje być skalowalna, ponieważ systemy wymagają coraz większej liczby specjalistów do instalacji, konfiguracji oraz optymalizacji. IBM wskazuje, że jedyną opcją poradzenia sobie z tym problemem jest Autonomiczne Przetwarzanie (ang. \textit{Autonomic Computing}). Nawiązuje ono do autonomicznego układu nerwowego człowieka, który zarządza pracą naszego serca lub utrzymaniem temperatury ciała, zwalniając świadomą część mózgu z tych obowiązków. W kontekście systemów informatycznych człowiek zwolniony by był z konfiguracji, optymalizacji, naprawy oraz ochrony, gdyż powstałe system były by "Self-CHOP" (ang. \textit{Self-Configuration, Self-Optimization, Self-Healing, Self-Protection}). Jest to ważne pojęcie stanowiące podwaliny wielu dalszych badań. Architektura autonomicznych systemów przedstawiona jest na rysunku \ref{fig:25-ibm}.
 
 \begin{figure}[!htbp]
@@ -26,13 +26,15 @@ Powyższe architektury zostaną dokładniej opisane w dalszej części pracy (zw
 \end{figure}
 
 \cite{fallon2019} wskazuje wyzwania jakim należy się przeciwstawić, aby umożliwić autonomiczność poprzez pętle sterowania w sieciach. Są to następujące kroki:
-\begin{itemize}
+\begin{itemize}\hypertarget{list:1}{}
     \item Potrzebny jest model opisujący pętle sterowania w standardowy sposób. Pozwoli to uchronić się przed pragramtycznością i niesystematycznością.
     \item Potrzebny jest framework do wdrażania pętli sterowania umożliwiający ich zarządzanie oraz działanie (ang. \textit{runtime}) w jednym miejscu.
     \item Potrzebne są (najlepiej) graficzne narzędzia do projektowania i symulacji pętli sterowania, tak aby ich wdrażanie nie wymagało specjalistycznych umiejętności technicznych.
 \end{itemize}
 
-Następnym punktem artykułu jest omówienie systemu zarządzania ONAP\footnote{\url{https://www.onap.org}} (Open Network Automation Platform) \cite{onap2018}. ONAP to open-source’owa platforma do orkiestracji, zarządzania i automatyzacji usług sieciowych, rozwijana przez Linux Foundation. ONAP składa się z \textbf{wielu modułów i API}, które umożliwiają pełne \textbf{zarządzanie cyklem życia usług sieciowych}, od ich projektowania, poprzez wdrażanie, aż po operacje eksploatacyjne. Jego kluczowe elementy to:
+\subsubsection{ONAP/CLAMP}
+
+Następnym punktem \cite{fallon2019} jest omówienie systemu zarządzania ONAP\footnote{\url{https://www.onap.org}} (Open Network Automation Platform) \cite{onap2018}. ONAP to open-source’owa platforma do orkiestracji, zarządzania i automatyzacji usług sieciowych, rozwijana przez Linux Foundation. ONAP składa się z \textbf{wielu modułów i API}, które umożliwiają pełne \textbf{zarządzanie cyklem życia usług sieciowych}, od ich projektowania, poprzez wdrażanie, aż po operacje eksploatacyjne. Jego kluczowe elementy to:
 \begin{itemize}
     \item \textbf{Master Service Orchestrator (MSO)} – centralny komponent odpowiedzialny za orkiestrację.
     \item \textbf{SDN Controllers (APPC, SDNC, VFC)} – kontrolery zarządzające różnymi warstwami sieci.
@@ -53,7 +55,71 @@ Komponentem odpowiedzialnym za pętle sterowania w ONAP jak i zarówno kandydate
 \end{itemize}
 
 
-Niniejsza praca znajduję lukę, którą chce zapełnić w postaci platformy służącej do modelowania oraz uruchamiania zamkniętych pętli sterowania. Luka ta umotywowana jest wyzwaniami zdefiniowanymi przez \cite{fallon2019}, brakami w ONAP/CLAMP oraz zidentyfikowanie potrzeby takiej platformy w architekturach referencyjnych definiowanych przez ETSI GS ZSM oraz CLADRA, które to zostaną omówione dokładniej w dalszej części pracy w celu sformułowania wymagań na platformę. 
+
+
+\subsubsection{Architektura referencyjna ETSI ZSM}
+Nadrzędnym celem projektowym ZSM jest umożliwienie nie wymagającego udziału człowieka (ang. \textit{zero touch}) zarządzania siecią i usługami w środowisku wielu dostawców (ang. \textit{multi-vendor environment}) \cite{etsizsm2018}. Architektura przyjmuje pewien zestaw pryncypiów (zasad):
+\begin{enumerate}
+    \item Modularność  
+    \item Rozszerzalność  
+    \item Skalowalność  
+    \item Sterowane modelem, otwarte interfejsy  
+    \item \textbf{Automatyzacja zarządzania w pętli zamkniętej}  
+    \item Obsługa funkcji zarządzania bezstanowego  
+    \item Odporność  
+    \item Rozdzielenie obszarów zarządzania  
+    \item Kompozycyjność usług  
+    \item Interfejsy oparte na intencjach  
+    \item Abstrakcja funkcjonalna  
+    \item Prostota  
+    \item Zaprojektowane do automatyzacji  
+\end{enumerate}
+
+Framework ZSM podąża za trendem w branży polegającym na odejściu od monolitycznych ściśle powiązanych systemów na rzecz bardziej elastycznych zestawów usług zarządzania (ang. \textit{management services}). Referencyjna architektura ZSM określa zestaw elementów składowych (ang. \textit{building blocks}), które wspólnie umożliwiają konstruowanie bardziej złożonych usług i funkcji zarządzania. Konstrukcja ta odbywa się zgodnie ze wzorcami kompozycji i współdziałania (ang. \textit{composition and interoperation patterns}). 
+
+Logicznie, framework ZSM składa się z rozproszonych serwisów zarządzania (ang. \textit{management services} i serwisów danych (ang. \textit{data services}), które zorganizowane są w domeny zarządzania (ang. \textit{management domains}) oraz zintegrowane poprzez powłokę integracyjną (ang. \textit{integration fabric}). Powłoka integracyjna również jest uzywana do komunikacji serwisów zarządzania z systemami zewnętrznymi.
+
+Architektura referencyjna zapewnia środki do budowania i komponowania luźno powiązanych funkcji zarządzania (ang. \textit{management functions}), które oferują serwisy zarządzania i wspólnie zapewniają kompleksowe zarządzanie danej domeny w sposób "zero-touch". Aby oferować swoje serwisy, funkcje udostępniają możliwość ich wywoływania i komunikacji z nimi za pomocą end-point'ów. 
+
+\begin{figure}[!htbp]
+    \centering \includegraphics[width=1.0\linewidth]{24-zsm-arch.png}
+    \caption{Architektura referencyjna ZSM}\label{fig:24-zsm-arch}
+\end{figure}
+
+Na rysunku \ref{fig:24-zsm-arch} przedstawiono architekturę referencyjną. Poniżej krótkie omówienie jej elementów:
+\begin{itemize}
+    \item Serwis zarządzania (ang. Management Service) - niewidoczna na rysunku, najmniejsza jednostka usługowa architektury, odpowiedzialna za niepodzielny aspekt składowy zarządzania
+    \item Serwis danych (ang. Data Service) - jednostka odpowiedzialna za gromadzenie danych, informacji oraz wiedzy
+    \item Funkcja zarządzania (ang. Management Function) - połączenie wielu serwisów zarządzania, odpowiedzialna za dany aspekt składowy zamkniętej pętli zarządzania
+    \item Domena Zarządzania (ang. Management Domain) - odpowiedzialna za konkretną funkcjonalność zarządzania (np. analityka, orkiestracja, bezpieczeństwo)
+    \item Domena Zarządzania end-to-end (ang. E2E Management Domain) - odpowiedzialna za zarządzanie usługami wymagającymi wielu funkcjonalności
+    \item Powłoka integracji (ang. Integration Fabric) - odpowiedzialna za komunikacje pomiędzy między wszystkimi komponentami
+\end{itemize}
+
+Pętle zarządzania komponowane są z funkcji zarządzania w sposób pokazany na rysunku \ref{fig:24-zsm-loop}. Jako model przyjęto  strukturę pętli OODA \cite{boyd1995} z wprowadzeniem komponentu wiedzy znanego z pętli MAPE-K \cite{kephart2003}. 
+
+\begin{figure}[!htbp]
+    \centering \includegraphics[width=1.0\linewidth]{24-zsm-loop.png}
+    \caption{Mapowanie pomiędzy elementami składowymi architektury ZSM a zamkniętą pętlą sterowania}\label{fig:24-zsm-loop}
+\end{figure}
+
+
+Architektura ZSM również specyfikuje cykl życia zamkniętej pętli sterowania oraz koordynacje między pętlami. Cykl życia pętli podzielony jest na dwie fazy: "Design-Time" oraz "Run-Time" a ich poszczególne kroki obserwujemy na rysunku \ref{fig:24-zsm-lifecycle}. Jeśli chodzi o koordynacje między pętlami to zdefiniowano dwa przypadki: pętle hierarchiczne oraz pętle peer-to-peer. Pętle mogą komunikować się w obrębie jednej domeny zarządzania jak i również między domenami. 
+
+\begin{figure}[!htbp]
+    \centering \includegraphics[width=1.0\linewidth]{24-zsm-lifecycle.png}
+    \caption{Fazy cyklu życia oraz aktywności zamkniętej pętli sterowania}\label{fig:24-zsm-lifecycle}
+\end{figure}
+
+
+
+
+\subsubsection{Achitektura referencyjna ETSI ENI}
+\subsubsection{Architektura referencyjna CLADRA (TM Forum)}
+
+\subsubsection{Podsumowanie}
+
+Niniejsza praca znajduję lukę, którą chce zapełnić w postaci platformy służącej do modelowania oraz uruchamiania zamkniętych pętli sterowania. Luka ta umotywowana jest \hyperlink{list:1}{wyzwaniami zdefiniowanymi przez \cite{fallon2019}}, brakami w ONAP/CLAMP oraz zidentyfikowanie potrzeby takiej platformy w architekturach referencyjnych definiowanych przez ETSI GS ZSM oraz CLADRA, które to zostaną omówione dokładniej w dalszej części pracy w celu sformułowania wymagań na platformę. 
 
 Odnosząc się do architektury z \cite{kephart2003} proponowana w niniejszej pracy platforma polega na wyniesieniu autonomicznych menadżerów do jednego wspólnego miejsca (Rysunek \ref{fig:24-lupus}).
 
