feat: finish CLADRA arch in 2.4

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -107,6 +107,14 @@
     doi          = {10.1109/MNET.001.1900252}
 }
 
+@misc{tmforum2018,
+    author       = {TM Forum},
+    title        = {Open Digital Architecture},
+    year         = {2018},
+    url          = {https://www.tmforum.org/resources/publication/open-digital-architecture/},
+    note         = {Dostęp online: 07.02.2025}
+}
+
 
 @techreport{tmforum2021,
     author       = {TM Forum},
