--- a/tex/appendix/main.tex
+++ b/tex/appendix/main.tex
@@ -12,3 +12,4 @@
 \input{tex/appendix/8-test-agent-egress.tex}
 \input{tex/appendix/9-test-opa.tex}
 \input{tex/appendix/10-test-lupn.tex}
+\input{tex/appendix/11-closed-loop-manager.tex}
