--- a/tex/2-stan-wiedzy/main.tex
+++ b/tex/2-stan-wiedzy/main.tex
@@ -2,3 +2,4 @@
 \input{tex/2-stan-wiedzy/1-wstep.tex}
 \input{tex/2-stan-wiedzy/2-historia.tex}
 \input{tex/2-stan-wiedzy/4-przeglad.tex}
+\input{tex/2-stan-wiedzy/5-przeglad.tex}
