--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -29,6 +29,28 @@
     doi          = {10.1109/MC.2003.1160055}
 }
 
+@article{strassner2003,
+    author    = {John Strassner},
+    title     = {DEN-ng: achieving business-driven network management},
+    journal   = {IEEE Communications Magazine},
+    volume    = {41},
+    number    = {10},
+    pages     = {90--96},
+    year      = {2003},
+    publisher = {IEEE}
+}
+
+
+@article{strassner2007,
+    author    = {John Strassner and Nazim Agoulmine and El Hadj Lehtihet},
+    title     = {FOCALE - A Novel Autonomic Networking Architecture},
+    journal   = {ITSSA Journal},
+    volume    = {3},
+    number    = {1},
+    pages     = {64--79},
+    year      = {2007}
+}
+
 @inproceedings{strassner2009,
     author       = {John Strassner and James Won-Ki Hong and Sven van der Meer},
     title        = {The Design of an Autonomic Element for Managing Emerging Networks and Services},
@@ -63,6 +85,14 @@
     url          = {https://google.com}, 
     doi          = {10.1109/NOMS.2018.8406144}
 }
+
+@techreport{etsigana2018,
+  title = {{ETSI TS 103 195-2 V1.1.1 (2018-05): Autonomic network engineering for the self-managing Future Internet (AFI); Generic Autonomic Network Architecture; Part 2: An Architectural Reference Model for Autonomic Networking, Cognitive Networking and Self-Management}},
+  institution = {ETSI},
+  year = {2018},
+  url = {https://www.etsi.org/deliver/etsi_ts/103100_103199/10319502/01.01.01_60/ts_10319502v010101p.pdf}
+}
+
 
 @techreport{etsizsm2018,
     author       = {ETSI},
